Added 5 base classes requirements.

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -44,6 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\InHouse.cs" />
+    <Compile Include="Models\Inventory.cs" />
+    <Compile Include="Models\Outsourced.cs" />
+    <Compile Include="Models\Part.cs" />
+    <Compile Include="Models\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
